--- a/index.html
+++ b/index.html
@@ -86,18 +86,42 @@ function showPerguntaProblema() {
 }
 
 function showErros() {
-  const problemaInput = document.getElementById('problemaInput').value;
   const erros = [
     {cod:"C010/C018", desc:"Inclinação frontal excessiva"},
     {cod:"C020/C028", desc:"Inclinação traseira excessiva"},
     {cod:"C040/C048", desc:"Limitador de velocidade frontal/traseiro ativado"},
-    {cod:"C100/C108", desc:"Bateria traseira/frontal vazia"}
-    // ... continue adicionando os erros conforme necessário
+    {cod:"C100/C108", desc:"Bateria traseira/frontal vazia"},
+    {cod:"C200/C208", desc:"Desligamento da bateria traseira/frontal"},
+    {cod:"C400/C408", desc:"Ângulo de rotação excedido"},
+    {cod:"C800/C808", desc:"Baixa voltagem do barramento"},
+    {cod:"E012/E01A/E01B", desc:"Falha na comunicação com o módulo CU"},
+    {cod:"E022/E02A/E02B", desc:"Falha na comunicação com o módulo BSA"},
+    {cod:"E042/E04A/E04B", desc:"Falha na comunicação com o módulo BSA"},
+    {cod:"E082/E08A/E08B", desc:"Falha na comunicação com o módulo UI"},
+    {cod:"E202/E20A/E20B", desc:"Falha no slot TDM"},
+    {cod:"E402/E40A/E40B", desc:"Falha na comunicação remota com o BSA"},
+    {cod:"E802/E80A/E80B", desc:"Falha na comunicação remota com o UI"},
+    {cod:"E013/E01C/E02C", desc:"Falha na comunicação com o módulo BCU"},
+    {cod:"E014/E024/E044", desc:"Falha no sensor de yaw"},
+    {cod:"E084/E104/E204", desc:"Falha nos sensores auxiliares"},
+    {cod:"E404/E40C", desc:"Falha no sensor de detecção do piloto"},
+    {cod:"E804/E80C", desc:"Falha no sensor de alimentação"},
+    {cod:"E015/E025/E045", desc:"Falha nos sensores de alimentação (12V, 5V, 3V)"},
+    {cod:"E085/E105/E205", desc:"Falha no sensor de temperatura do BSA"},
+    {cod:"E105/E205/E405", desc:"Falha interna do BSA"},
+    {cod:"E016/E026/E046", desc:"Falha na temperatura da junção"},
+    {cod:"E086/E106/E206", desc:"Falha no motor de acionamento"},
+    {cod:"E406/E406", desc:"Falha no amplificador de corrente do motor"},
+    {cod:"E806/E806", desc:"Falha no feedback de voltagem do motor"},
+    {cod:"E017/E027/E047", desc:"Falha na consistência da voltagem do motor"},
+    {cod:"E087/E107/E207", desc:"Falha no relé do motor"},
+    {cod:"E407/E407", desc:"Falha na consistência da alimentação do atuador"}
   ];
 
   let secaoErros = document.createElement('div');
   secaoErros.id = "erros";
   secaoErros.innerHTML = `<h2>O veículo apresenta algum desses erros?</h2>`;
+  
   erros.forEach(e => {
     let btn = document.createElement('button');
     btn.className = "btn";
@@ -144,5 +168,6 @@ function checkCampos() {
 
 </body>
 </html>
+
 
 
